// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button adds additional className when supplied 1`] = `
<button
  className="reactist_button very-complex classnames-are-added"
  disabled={false}
  onClick={[Function]}
>
  <div
    className="wrapper"
  >
    <span>
      THE BUTTON TEXT
    </span>
  </div>
</button>
`;

exports[`Button applies any extra props to the underlying button 1`] = `
<button
  className="reactist_button"
  disabled={false}
  form="form-id"
  onClick={[Function]}
  type="submit"
>
  <div
    className="wrapper"
  >
    <span>
      THE BUTTON TEXT
    </span>
  </div>
</button>
`;

exports[`Button renders a tooltip when prop is supplied 1`] = `
<Tooltip
  allowVaguePositioning={false}
  delayHide={0}
  delayShow={500}
  gapSize={5}
  hideOnScroll={true}
  inverted={false}
  position="auto"
  text="THE TOOLTIP"
  withArrow={true}
>
  <button
    className="reactist_button"
    disabled={false}
    onClick={[Function]}
  >
    <div
      className="wrapper"
    >
      <span>
        THE BUTTON TEXT
      </span>
    </div>
  </button>
</Tooltip>
`;

exports[`Button renders empty without crashing 1`] = `
<button
  className="reactist_button"
  disabled={false}
  onClick={[Function]}
>
  <div
    className="wrapper"
  >
    <span />
  </div>
</button>
`;

exports[`Button renders name as button text 1`] = `
<button
  className="reactist_button"
  disabled={false}
  onClick={[Function]}
>
  <div
    className="wrapper"
  >
    <span>
      THE BUTTON TEXT
    </span>
  </div>
</button>
`;
